--- a/package.json
+++ b/package.json
@@ -24,17 +24,26 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
+    "@angular/router": "^3.2.1",
     "@ionic/storage": "1.1.7",
+    "@ngrx/core": "^1.1.0",
+    "@ngrx/effects": "^2.0.0",
+    "@ngrx/router-store": "^1.2.5",
+    "@ngrx/store": "^2.2.1",
+    "@ngrx/store-devtools": "^3.2.2",
     "ionic-angular": "2.0.0-rc.4",
     "ionic-native": "2.2.13",
     "ionicons": "3.0.0",
+    "ng2-translate": "^5.0.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.21"
   },
   "devDependencies": {
     "@ionic/app-scripts": "0.0.48",
     "electron-packager": "^8.2.0",
-    "electron-prebuilt": "^1.4.5",
+    "electron-prebuilt": "^1.4.13",
+    "grunt": "^1.0.1",
+    "grunt-bump": "^0.8.0",
     "typescript": "2.1.4"
   },
   "cordovaPlugins": [
