--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build:before": "build",
     "run:before": "build",
     "electron": "electron .",
-    "electron dist": "electron ."
+    "electron dist": "electron .",
+    "test": "grunt bump:prepatch && ionic serve",
+    "start": "grunt bump && ionic build browser && firebase deploy"
   },
   "dependencies": {
     "@angular/common": "2.2.1",
@@ -31,10 +33,12 @@
     "@ngrx/router-store": "^1.2.5",
     "@ngrx/store": "^2.2.1",
     "@ngrx/store-devtools": "^3.2.2",
+    "angular2-jwt": "^0.1.27",
     "ionic-angular": "2.0.0-rc.4",
     "ionic-native": "2.2.13",
     "ionicons": "3.0.0",
     "ng2-translate": "^5.0.0",
+    "pouchdb": "^6.1.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.21"
   },
