--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ionic-hello-world",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "name": "Filterize",
+  "author": "Pascal Held",
+  "homepage": "http://filterize.net/",
   "private": true,
   "scripts": {
     "build": "ionic-app-scripts build",
@@ -13,7 +13,7 @@
     "run:before": "build",
     "electron": "electron .",
     "electron dist": "electron .",
-    "test": "grunt bump:prepatch && ionic serve",
+    "test": "grunt bump:prerelease && ionic serve",
     "start": "grunt bump && ionic build browser && firebase deploy"
   },
   "dependencies": {
@@ -39,6 +39,7 @@
     "ionicons": "3.0.0",
     "ng2-translate": "^5.0.0",
     "pouchdb": "^6.1.0",
+    "raven-js": "^3.9.1",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.21"
   },
@@ -67,5 +68,5 @@
     }
   ],
   "main": "electron.js",
-  "description": "filterize-app: An Ionic project"
+  "description": "Filterize Console allows you to configure your filterize filter."
 }
