--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pouchdb": "^6.1.0",
     "raven-js": "^3.9.1",
     "rxjs": "5.0.0-beta.12",
+    "strftime": "^0.10.0",
     "zone.js": "^0.6.21"
   },
   "devDependencies": {
