--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "homepage": "http://filterize.net/",
   "private": true,
   "scripts": {
+    "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve",
     "watch": "ionic-app-scripts watch",
     "serve:before": "watch",
     "emulate:before": "build",
@@ -28,15 +31,15 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
-    "@angular/router": "^3.2.1",
+    "@angular/router": "3.2.1",
     "@ionic/storage": "1.1.7",
     "@ngrx/core": "^1.1.0",
     "@ngrx/effects": "^2.0.0",
     "@ngrx/router-store": "^1.2.5",
     "@ngrx/store": "^2.2.1",
     "@ngrx/store-devtools": "^3.2.2",
-    "angular2-jwt": "^0.1.27",
-    "ionic-angular": "2.0.0-rc.4",
+    "angular2-jwt": "0.1.27",
+    "ionic-angular": "2.0.0",
     "ionic-native": "2.2.13",
     "ionicons": "3.0.0",
     "ng2-translate": "^5.0.0",
@@ -47,7 +50,7 @@
     "zone.js": "^0.6.21"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "0.0.48",
+    "@ionic/app-scripts": "1.0.0",
     "browserify": "^13.3.0",
     "electron-packager": "^8.2.0",
     "electron-prebuilt": "^1.4.13",
@@ -57,7 +60,7 @@
     "ionic-minify": "^2.0.10",
     "node-version-compare": "^1.0.1",
     "sw-precache": "^4.2.3",
-    "typescript": "2.1.4",
+    "typescript": "2.0.9",
     "uglify-js": "^2.7.5"
   },
   "cordovaPlugins": [
