--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "raven-js": "^3.9.1",
     "rxjs": "5.0.0-beta.12",
     "strftime": "^0.10.0",
+    "uuid": "^3.0.1",
     "zone.js": "^0.6.21"
   },
   "devDependencies": {
