allow google oauth login

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ngrx/store": "^2.2.1",
     "@ngrx/store-devtools": "^3.2.2",
     "angular2-jwt": "0.1.27",
+    "google-oauth2-web-client": "^0.1.2",
     "ionic-angular": "2.0.0",
     "ionic-native": "2.2.13",
     "ionicons": "3.0.0",
