--- a/package.json
+++ b/package.json
@@ -22,37 +22,37 @@
     "start": "grunt bump && ionic build browser && grunt swPrecache:release && firebase deploy"
   },
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/compiler-cli": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/platform-server": "2.2.1",
-    "@angular/router": "3.2.1",
-    "@ionic/storage": "1.1.7",
+    "@angular/common": "2.4.8",
+    "@angular/compiler": "2.4.8",
+    "@angular/compiler-cli": "2.4.8",
+    "@angular/core": "2.4.8",
+    "@angular/forms": "2.4.8",
+    "@angular/http": "2.4.8",
+    "@angular/platform-browser": "2.4.8",
+    "@angular/platform-browser-dynamic": "2.4.8",
+    "@angular/platform-server": "2.4.8",
+    "@angular/router": "^3.4.8",
+    "@ionic/storage": "2.0.0",
     "@ngrx/core": "^1.1.0",
     "@ngrx/effects": "^2.0.0",
-    "@ngrx/router-store": "^1.2.5",
     "@ngrx/store": "^2.2.1",
     "@ngrx/store-devtools": "^3.2.2",
-    "angular2-jwt": "0.1.27",
+    "angular2-jwt": "^0.1.27",
     "google-oauth2-web-client": "^0.1.2",
-    "ionic-angular": "2.0.0",
-    "ionic-native": "2.2.13",
+    "ionic-angular": "2.2.0",
+    "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
     "ng2-translate": "^5.0.0",
     "pouchdb": "^6.1.0",
     "raven-js": "^3.9.1",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.1",
     "strftime": "^0.10.0",
+    "sw-toolbox": "3.4.0",
     "uuid": "^3.0.1",
-    "zone.js": "^0.6.21"
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.0.0",
+    "@ionic/app-scripts": "1.1.4",
     "browserify": "^13.3.0",
     "electron-packager": "^8.2.0",
     "electron-prebuilt": "^1.4.13",
